Z-index fixes

--- a/QWC2Components/plugins/style/Identify.css
+++ b/QWC2Components/plugins/style/Identify.css
@@ -3,7 +3,7 @@
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.75)!important;
     border-width: 0!important;
     background-color: white;
-    z-index: 6!important;
+    z-index: 7!important;
 }
 
 #mapstore-getfeatureinfo  div.panel-body {
